<resources>
    <string name="app_name">Money Manager</string>
    <string name="title_activity_main">Home</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>


    <!--NAVIGATION DRAWER MENU ITEMS-->
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_expense">Expenses</string>
    <string name="navigation_item_income">Income</string>
    <string name="navigation_item_budget">Budget</string>
    <string name="navigation_item_logout">Log Out</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_item_sync_inbox">Import From Inbox</string>
    <string name="import_dialog_title">Checking sms inbox</string>
    <string name="import_dialog_message">"Loading... "</string>
</resources>
