<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/navigation_item_home"
        android:title="@string/navigation_item_home"
        android:icon="@drawable/ic_home_white_48dp" />
    <item android:id="@+id/navigation_item_expense"
        android:title="@string/navigation_item_expense"/>
    <item android:id="@+id/navigation_item_income"
        android:title="@string/navigation_item_income"/>
    <item android:id="@+id/navigation_item_budget"
        android:title="@string/navigation_item_budget"
        android:icon="@drawable/ic_account_balance_wallet_white_48dp" />
    <item android:id="@+id/navigation_item_sync_inbox"
        android:title="@string/navigation_item_sync_inbox"
        android:icon="@drawable/ic_swap_vert_white_48dp"/>
    <item android:id="@+id/navigation_item_logout"
        android:title="@string/navigation_item_logout"
        android:icon="@drawable/ic_power_settings_new_white_48dp"/>
</menu>